--- a/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
+++ b/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
@@ -130,6 +130,10 @@
                 <artifactId>tl-service-openapi-server</artifactId>
         </dependency>
 #end
+		<dependency>
+			<groupId>com.top-logic</groupId>
+			<artifactId>tl-importer-jdbc</artifactId>
+		</dependency>
 
 		<!-- Tests -->
 		<dependency>
