Ticket #27514: Add the project `tl-importer-jdbc`.

--- a/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
+++ b/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
@@ -132,6 +132,10 @@
                 <artifactId>tl-service-openapi-server</artifactId>
         </dependency>
 #end
+		<dependency>
+			<groupId>com.top-logic</groupId>
+			<artifactId>tl-importer-jdbc</artifactId>
+		</dependency>
 
 		<!-- Tests -->
 		<dependency>
