Ticket #27514: Fix the usage of the new module `tl-importer-jdbc` in the "archetype app". It needs to be included in one of the dependencies of `tl-archetype-app/pom.xml`. Those dependencies are `tl-bpe-app` and `tl-demo`. `tl-importer-jdbc` is therefore added as a dependency to the `tl-demo`. Without that, Maven might build it in the wrong order.

--- a/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
+++ b/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
@@ -130,10 +130,12 @@
                 <artifactId>tl-service-openapi-server</artifactId>
         </dependency>
 #end
+#if ($useJdbcImporter == "true")
 		<dependency>
 			<groupId>com.top-logic</groupId>
 			<artifactId>tl-importer-jdbc</artifactId>
 		</dependency>
+#end
 
 		<!-- Tests -->
 		<dependency>
