--- a/com.top_logic.demo/pom.xml
+++ b/com.top_logic.demo/pom.xml
@@ -111,6 +111,10 @@
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
+      <artifactId>tl-importer-jdbc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
       <artifactId>tl-service-jms</artifactId>
     </dependency>
     <dependency>
