Ticket #27514: Fix the usage of the new module `tl-importer-jdbc` in the "archetype app". It needs to be included in one of the dependencies of `tl-archetype-app/pom.xml`. Those dependencies are `tl-bpe-app` and `tl-demo`. `tl-importer-jdbc` is therefore added as a dependency to the `tl-demo`. Without that, Maven might build it in the wrong order.

--- a/com.top_logic.demo/pom.xml
+++ b/com.top_logic.demo/pom.xml
@@ -119,6 +119,10 @@
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
+      <artifactId>tl-importer-jdbc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
       <artifactId>tl-service-jms</artifactId>
     </dependency>
     <dependency>
