--- a/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
+++ b/tl-archetype-app/src/main/resources/archetype-resources/pom.xml
@@ -132,10 +132,12 @@
                 <artifactId>tl-service-openapi-server</artifactId>
         </dependency>
 #end
+#if ($useJdbcImporter == "true")
 		<dependency>
 			<groupId>com.top-logic</groupId>
 			<artifactId>tl-importer-jdbc</artifactId>
 		</dependency>
+#end
 
 		<!-- Tests -->
 		<dependency>
