--- a/com.top_logic.model.search/pom.xml
+++ b/com.top_logic.model.search/pom.xml
@@ -42,6 +42,26 @@
 		<artifactId>jackson-dataformat-csv</artifactId>
 		<version>2.13.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>5.2.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>5.2.2</version>
+	</dependency>
+		<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml-full</artifactId>
+	    <version>5.2.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-scratchpad</artifactId>
+	    <version>5.2.2</version>
+	</dependency>
   </dependencies>
   
 	<build>
