Ticket #28464: Made all modules dependent on tl-model-search also dependent on tl-contact.

--- a/com.top_logic.xio/pom.xml
+++ b/com.top_logic.xio/pom.xml
@@ -29,5 +29,9 @@
       <groupId>com.top-logic</groupId>
       <artifactId>tl-model-search</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
+      <artifactId>tl-contact</artifactId>
+    </dependency>
   </dependencies>
 </project>
