--- a/com.top_logic.doc/pom.xml
+++ b/com.top_logic.doc/pom.xml
@@ -31,6 +31,10 @@
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
+      <artifactId>tl-contact</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
       <artifactId>tl-search-lucene</artifactId>
     </dependency>
     <dependency>
