--- a/com.top_logic.kafka/pom.xml
+++ b/com.top_logic.kafka/pom.xml
@@ -35,6 +35,10 @@
 	</dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
+      <artifactId>tl-contact</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
       <artifactId>tl-element</artifactId>
     </dependency>
     <dependency>
