--- a/com.top_logic.model.wysiwyg/pom.xml
+++ b/com.top_logic.model.wysiwyg/pom.xml
@@ -33,5 +33,9 @@
       <groupId>com.top-logic</groupId>
       <artifactId>tl-model-search</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
+      <artifactId>tl-contact</artifactId>
+    </dependency>
   </dependencies>
 </project>
