--- a/com.top_logic.service.openapi.server/pom.xml
+++ b/com.top_logic.service.openapi.server/pom.xml
@@ -28,6 +28,10 @@
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
+      <artifactId>tl-contact</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.top-logic</groupId>
       <artifactId>tl-service-openapi-common</artifactId>
     </dependency>
 	<dependency>
