--- a/com.top_logic.search.lucene/pom.xml
+++ b/com.top_logic.search.lucene/pom.xml
@@ -31,11 +31,15 @@
     </dependency>
 	<dependency>
 	    <groupId>org.apache.lucene</groupId>
-	    <artifactId>lucene-analyzers-common</artifactId>
+	    <artifactId>lucene-analysis-common</artifactId>
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.lucene</groupId>
 	    <artifactId>lucene-queryparser</artifactId>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.lucene</groupId>
+	    <artifactId>lucene-backward-codecs</artifactId>
 	</dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
