--- a/tl-parent-all/pom.xml
+++ b/tl-parent-all/pom.xml
@@ -863,13 +863,18 @@
 			</dependency>
 			<dependency>
 			    <groupId>org.apache.lucene</groupId>
-			    <artifactId>lucene-analyzers-common</artifactId>
-			    <version>8.11.2</version>
+			    <artifactId>lucene-analysis-common</artifactId>
+			    <version>9.12.0</version>
 			</dependency>
 			<dependency>
 			    <groupId>org.apache.lucene</groupId>
 			    <artifactId>lucene-queryparser</artifactId>
-			    <version>8.11.2</version>
+			    <version>9.12.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.apache.lucene</groupId>
+			    <artifactId>lucene-backward-codecs</artifactId>
+			    <version>9.12.0</version>
 			</dependency>
 			<dependency>
 			    <groupId>org.apache.poi</groupId>
