Ticket #28310: add new TL-Script Function and update Documentation

--- a/com.top_logic.model.search/src/main/webapp/doc/en/DeveloperGuide/BusinessProcessEngine/executeTransition/page.properties
+++ b/com.top_logic.model.search/src/main/webapp/doc/en/DeveloperGuide/BusinessProcessEngine/executeTransition/page.properties
@@ -1,4 +1,4 @@
-position=3000
+position=4000
 source=com.top_logic.model.search
-title=Making the transition
+title=Execute transition
 uuid=ea0ba0aa-dca3-41d1-9153-e72d7acc5f48
