--- a/com.top_logic.graphic.blocks.server/pom.xml
+++ b/com.top_logic.graphic.blocks.server/pom.xml
@@ -23,6 +23,11 @@
   	
   	<dependency>
 		<groupId>com.top-logic</groupId>
+		<artifactId>tl-model-search</artifactId>
+  	</dependency>
+  	
+  	<dependency>
+		<groupId>com.top-logic</groupId>
 		<artifactId>tl-graphic-blocks</artifactId>
 		<version>${project.version}</version>
   	</dependency>
