Ticket #24649: Preserve method parameter names during compilation.

--- a/tl-parent-core/pom.xml
+++ b/tl-parent-core/pom.xml
@@ -156,6 +156,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
+					<parameters>true</parameters>
 
 					<annotationProcessors>com.top_logic.build.processor.TypeIndexer</annotationProcessors>
 
