--- a/tl-parent-all/pom.xml
+++ b/tl-parent-all/pom.xml
@@ -1330,6 +1330,7 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<parameters>true</parameters>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 					<compilerArgs>
