--- a/tl-importer-jdbc/pom.xml
+++ b/tl-importer-jdbc/pom.xml
@@ -7,7 +7,7 @@
 		<relativePath>../tl-parent-core/internal</relativePath>
 		<groupId>com.top-logic</groupId>
 		<artifactId>tl-parent-core-internal</artifactId>
-		<version>0.0.1-CWS_27514-SNAPSHOT</version>
+		<version>7.9.3</version>
 	</parent>
 
 	<artifactId>tl-importer-jdbc</artifactId>
