--- a/com.top_logic.graphic.blocks/pom.xml
+++ b/com.top_logic.graphic.blocks/pom.xml
@@ -15,5 +15,29 @@
 		<groupId>com.top-logic</groupId>
 		<artifactId>tl-common-json</artifactId>
   	</dependency>
+
+  	<dependency>
+		<groupId>de.haumacher.msgbuf</groupId>
+		<artifactId>msgbuf-api</artifactId>
+	</dependency>
   </dependencies>
+  
+  	<build>
+		<plugins>
+			<plugin>
+				<groupId>de.haumacher.msgbuf</groupId>
+				<artifactId>msgbuf-generator-maven-plugin</artifactId>
+				<version>${msgbuf.version}</version>
+
+				<executions>
+					<execution>
+						<id>generate-protocols</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+  	</build>
 </project>
