Ticket #28310: Added new migration baseline for TL-7.9.3.

--- a/test-migrate-apps/pom.xml
+++ b/test-migrate-apps/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>test-app-7-5-0-M1</module>
 		<module>test-app-7-4-0</module>
+	    <module>test-app-7-9-3</module>
 	    <module>test-app-rewrite</module>
 	</modules>
 	
