--- a/test-migrate-apps/test-app-7-9-3/pom.xml
+++ b/test-migrate-apps/test-app-7-9-3/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.top-logic</groupId>
 		<artifactId>tl-parent-app</artifactId>
-		<version>7.9.3</version>	
+		<version>7.10.0-SNAPSHOT</version>	
 	</parent>
 	
 	<artifactId>test-app-7-9-3</artifactId>
