--- a/test-migrate-apps/test-app-7-9-3/pom.xml
+++ b/test-migrate-apps/test-app-7-9-3/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>com.top-logic</groupId>
-		<artifactId>tl-parent-app</artifactId>
+		<artifactId>test-migrate-apps</artifactId>
 		<version>7.10.0-SNAPSHOT</version>	
 	</parent>
 	
