--- a/tl-parent-all/pom.xml
+++ b/tl-parent-all/pom.xml
@@ -1458,6 +1458,28 @@
 							<addResourcesToClasspath>false</addResourcesToClasspath>
 						</configuration>
 					</execution>
+
+					<!-- Run with mvn exec:java@migrate-ticket28336 -->
+					<execution>
+						<id>migrate-ticket28336</id>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						
+						<configuration>
+							<skip>${skipNormalizeLayouts}</skip>
+
+							<mainClass>com.top_logic.layout.tools.ticket28336.UpgradeConfirmMessages</mainClass>
+							<arguments>
+								<argument>${tl.layoutDir}</argument>
+							</arguments>
+						    	
+							<includePluginDependencies>false</includePluginDependencies>
+							<includeProjectDependencies>true</includeProjectDependencies>
+							<addOutputToClasspath>true</addOutputToClasspath>
+							<addResourcesToClasspath>true</addResourcesToClasspath>
+						</configuration>
+					</execution>
 		        </executions>
 			</plugin>
 
