--- a/com.top_logic.graphic.blocks/pom.xml
+++ b/com.top_logic.graphic.blocks/pom.xml
@@ -10,6 +10,10 @@
 
   <artifactId>tl-graphic-blocks</artifactId>
 
+  <properties>
+    <msgbuf.version>1.1.8-SNAPSHOT</msgbuf.version>
+  </properties>
+
   <dependencies>
   	<dependency>
 		<groupId>com.top-logic</groupId>
