--- a/com.top_logic.graphic.blocks.client/pom.xml
+++ b/com.top_logic.graphic.blocks.client/pom.xml
@@ -11,7 +11,8 @@
   <artifactId>tl-graphic-blocks-client</artifactId>
 
   <properties>
-	<gwt.module>com.top_logic.graphic.blocks.client.TLBlocksClient</gwt.module>  	
+	<gwt.module>com.top_logic.graphic.blocks.client.TLBlocksClient</gwt.module>
+	<msgbuf.version>1.1.8-SNAPSHOT</msgbuf.version>
   </properties>
 
   <dependencies>
@@ -47,6 +48,32 @@
 		<artifactId>lib-gwt-svg</artifactId>
 		<version>0.5.15</version>
   	</dependency>
+
+	<dependency>
+	    <groupId>com.google.elemental2</groupId>
+	    <artifactId>elemental2-dom</artifactId>
+	    <version>1.2.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.elemental2</groupId>
+	    <artifactId>elemental2-dom</artifactId>
+	    <version>1.2.3</version>
+        <classifier>sources</classifier>
+        <scope>provided</scope>
+	</dependency>
+
+	<dependency>
+	    <groupId>com.google.elemental2</groupId>
+	    <artifactId>elemental2-core</artifactId>
+	    <version>1.2.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.elemental2</groupId>
+	    <artifactId>elemental2-core</artifactId>
+	    <version>1.2.3</version>
+        <classifier>sources</classifier>
+        <scope>provided</scope>
+	</dependency>
   	
     <!-- Note: Must repeat non-inherited dependencies (provided dependencies are not inherited). -->
     <dependency>
