--- a/com.top_logic.graphic.blocks.client/pom.xml
+++ b/com.top_logic.graphic.blocks.client/pom.xml
@@ -89,49 +89,49 @@
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-ajax-client</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-client-diagramjs</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-graph-diagramjs</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-graph-common</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-common-remote</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-common-json</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-basic-shared</artifactId>
-	  <version>7.9.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
