Ticket #28305: Allow to freely create a download name for exports.
The download name is provided by a single configured download name
provider. There is no longer a separate property for a constant download
name.

--- a/tl-parent-all/pom.xml
+++ b/tl-parent-all/pom.xml
@@ -1480,6 +1480,28 @@
 							<addResourcesToClasspath>true</addResourcesToClasspath>
 						</configuration>
 					</execution>
+
+					<!-- Run with mvn exec:java@migrate-ticket28305 -->
+					<execution>
+						<id>migrate-ticket28305</id>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						
+						<configuration>
+							<skip>${skipNormalizeLayouts}</skip>
+
+							<mainClass>com.top_logic.layout.tools.ticket28305.UpgradeDownloadNames</mainClass>
+							<arguments>
+								<argument>${tl.layoutDir}</argument>
+							</arguments>
+						    	
+							<includePluginDependencies>false</includePluginDependencies>
+							<includeProjectDependencies>true</includeProjectDependencies>
+							<addOutputToClasspath>true</addOutputToClasspath>
+							<addResourcesToClasspath>true</addResourcesToClasspath>
+						</configuration>
+					</execution>
 		        </executions>
 			</plugin>
 
