--- a/com.top_logic.element/pom.xml
+++ b/com.top_logic.element/pom.xml
@@ -36,4 +36,28 @@
       <artifactId>tl-core</artifactId>
     </dependency>
   </dependencies>
+  
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.top-logic</groupId>
+				<artifactId>tl-maven-plugin</artifactId>
+				<version>${tl.version}</version>
+	
+				<executions>
+					<execution>
+						<id>generate-binding</id>
+						<goals>
+							<goal>generate-java</goal>
+						</goals>
+						
+						<configuration>
+							<modules>tl.changelog</modules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+  
 </project>
