Ticket #24649: Added graphics package to build.

--- a/tl-parent-engine/pom.xml
+++ b/tl-parent-engine/pom.xml
@@ -73,6 +73,9 @@
 		<module>../com.top_logic.graph.diagramjs.server</module>
 		<module>../com.top_logic.graph.layouter</module>
 		<module>../com.top_logic.graph.server</module>
+		<module>../com.top_logic.graphic.blocks</module>
+		<module>../com.top_logic.graphic.blocks.client</module>
+		<module>../com.top_logic.graphic.blocks.server</module>
 		<module>../com.top_logic.ide.jetty</module>
 		<module>../com.top_logic.importer</module>
 		<module>../com.top_logic.kafka</module>
