Ticket #28675: Forced `commons-io` to dependency managed version.
When starting with `mvn`, `tl-ide-jetty` is added explicitly to the
dependencies of the application, which causes a downgrade of
`commons-io` to the version required by `h2migrationtool` by default.

--- a/com.top_logic.ide.jetty/pom.xml
+++ b/com.top_logic.ide.jetty/pom.xml
@@ -45,6 +45,24 @@
   	<dependency>
 	    <groupId>com.manticore-projects.tools</groupId>
 	    <artifactId>h2migrationtool</artifactId>
+
+		<!-- Exclude old version of dependency. -->
+		<!-- Note: tl-ide-jetty is explicitly added to the dependencies when starting through exec:java plugin. 
+		     This causes the dependencies of h2migrationtool to override the regular dependencies of the application
+		     causing dependencies to be downgraded which causes the app to fail.
+		-->
+		<exclusions>
+			<exclusion>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+			</exclusion>
+		</exclusions>
+	</dependency>
+	
+	<!-- Re-add new version of dependency. -->
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
 	</dependency>
   </dependencies>
 </project>
