Administrative change: Fixed missing team-prefix for reviewers team.

--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,7 @@
       "enabled": false,
       "reviewers": [
         "jenkins",
-        "TopLogic/Mitarbeiter"
+        "team:TopLogic/Mitarbeiter"
       ],
       "dependencyDashboard": false,
       "matchPackageNames": [
