Administrative change: Test default reviewers #2.

--- a/renovate.json
+++ b/renovate.json
@@ -11,8 +11,7 @@
       "enabled": false,
       "reviewers": [
         "jenkins",
-        "msi",
-        "TopLogic/Mitarbeiter"
+        "msi"
       ],
       "dependencyDashboard": false,
       "matchPackageNames": [
