--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,9 @@
       "enabled": false,
       "reviewers": [
         "jenkins",
-        "msi"
+        "msi",
+        "bhu",
+        "dbu"
       ],
       "dependencyDashboard": false,
       "matchPackageNames": [
