--- a/com.top_logic.client.diagramjs/.classpath
+++ b/com.top_logic.client.diagramjs/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry including="**/*.java" kind="src" output="target/tl-client-diagramjs-7.6.0-SNAPSHOT/WEB-INF/classes" path="src/main/java">
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="optional" value="true"/>
@@ -35,5 +35,5 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="target/tl-client-diagramjs-7.6.0-SNAPSHOT/WEB-INF/classes"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
