--- a/tl-service-jms-activemq/pom.xml
+++ b/tl-service-jms-activemq/pom.xml
@@ -10,7 +10,9 @@
 	</parent>
 	
 	<artifactId>tl-service-jms-activemq</artifactId>
-
+	<properties>
+	  <netty.version>4.1.127.Final</netty.version>
+	</properties>
 	<dependencies>
 		<!-- TopLogic JMS Service -->
 		<dependency>
@@ -32,7 +34,7 @@
 				<exclusion>
 			      <groupId>commons-beanutils</groupId>
 			      <artifactId>commons-beanutils</artifactId>
-			    </exclusion>	
+			    </exclusion>
 			</exclusions>
 		</dependency>
 		<!-- commons-beanutils 1.10.0 is still pulled transitively; we override that with a secure version -->
@@ -47,7 +49,75 @@
 		    </exclusion>
 		  </exclusions>
 		</dependency>
-
+		<!-- Because of the slow update cycle we override netty packages from artemis-jakarta-client due to faster security updates -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-native-epoll</artifactId>
+			<classifier>linux-x86_64</classifier>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-classes-epoll</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-native-kqueue</artifactId>
+			<classifier>osx-x86_64</classifier>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-classes-kqueue</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec-http</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-buffer</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler-proxy</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec-socks</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-resolver</artifactId>
+    		<version>${netty.version}</version>
+		</dependency>
+		
 		<!-- Tests -->
 		<dependency>
 			<groupId>com.top-logic</groupId>
