--- a/com.top_logic.graph.diagramjs.client/pom.xml
+++ b/com.top_logic.graph.diagramjs.client/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>com.top-logic</groupId>
       <artifactId>tl-ajax-client</artifactId>
-	  <version>7.10.0-SNAPSHOT</version>
+	  <version>${tl.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
