Ticket #28922: Switched to generic Tomcat Image 10.1-jre17.

--- a/test-migrate-apps/test-app-7-9-3/src/main/docker/Dockerfile_template
+++ b/test-migrate-apps/test-app-7-9-3/src/main/docker/Dockerfile_template
@@ -1,5 +1,4 @@
-FROM docker.top-logic.com/tomcat:10.1-jdk17-openjdk
-MAINTAINER support@top-logic.com
+FROM tomcat:10.1-jre17
 USER root
 RUN apt update
 {dbLibrary}
