Ticket #27483: Add -parameters flag to preserve method parameter names in bytecode.

--- a/tl-parent-all/pom.xml
+++ b/tl-parent-all/pom.xml
@@ -1332,6 +1332,9 @@
 				<configuration>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
+					<compilerArgs>
+	                    <arg>-parameters</arg>
+	                </compilerArgs>
 				</configuration>
 			</plugin>
 
